<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideInset"
    android:background="@drawable/img_background"
    tools:context=".UnitsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/troops"
            style="@style/titleStyle" />

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_unit_barbarian_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/barbarian"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_barbarian"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_capacity_icon_17_22"
                        style="@style/img_capacity"/>

                    <TextView
                        android:text="@string/_1"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_unit_archer_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/archer"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_archer"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_capacity_icon_17_22"
                        style="@style/img_capacity"/>

                    <TextView
                        android:text="@string/_1"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_unit_giant_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/giant"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_giant"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_capacity_icon_17_22"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_5"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_unit_goblin_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/goblin"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_goblin"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_capacity_icon_17_22"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_1"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_unit_wizard_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/wizard"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_wizard"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_capacity_icon_17_22"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_4"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_unit_dragon_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/dragon"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_dragon"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_capacity_icon_17_22"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_20"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/spells"
            style="@style/titleStyle" />

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_lightning_spell_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/lightning"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_lightning"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_spell_icon_24_23"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_1"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_healing_spell_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/healing"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_healing"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_spell_icon_24_23"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_2"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_rage_spell_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/rage"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_rage"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_spell_icon_24_23"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_2"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/dark_spells"
            style="@style/titleStyle" />

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_poison_spell_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/poison"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_poison"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_spell_icon_24_23"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_1"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/global_unit_row">

            <ImageView
                android:src="@drawable/img_skeleton_spell_83_83"
                style="@style/img_unit" />

            <LinearLayout style="@style/unit_row">

                <TextView
                    android:text="@string/skeletons"
                    style="@style/label_units" />

                <LinearLayout style="@style/layout_count">

                    <TextView
                        android:text="@string/count"
                        style="@style/label_count" />

                    <EditText
                        android:id="@+id/count_skeletons"
                        android:hint="@string/_0"
                        style="@style/text_count_units" />

                </LinearLayout>

                <LinearLayout style="@style/capacity_column">

                    <ImageView
                        android:src="@drawable/img_spell_icon_24_23"
                        style="@style/img_capacity" />

                    <TextView
                        android:text="@string/_1"
                        style="@style/count_capacity" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/swipeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_back" />
            <ImageButton
                android:id="@+id/swipeRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_forward" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>